--- a/package.json
+++ b/package.json
@@ -13,30 +13,29 @@
    "keywords": [],
    "license": "ISC",
    "dependencies": {
-      "axios": "^0.24.0",
-      "bcryptjs": "^2.4.3",
-      "body-parser": "^1.19.0",
+      "axios": "0.24.0",
+      "bcryptjs": "2.4.3",
+      "body-parser": "1.19.0",
       "connect-flash": "^0.1.1",
       "cookie-parser": "^1.4.5",
-      "cors": "^2.8.5",
-      "dotenv": "^9.0.2",
+      "cors": "2.8.5",
+      "dotenv": "9.0.2",
       "ejs": "^3.1.6",
-      "express": "^4.17.1",
+      "express": "4.17.1",
       "express-handlebars": "^3.1.0",
       "express-rate-limit": "^5.5.1",
       "express-session": "^1.17.2",
       "express-validator": "^6.13.0",
-      "joi": "^14.3.1",
-      "jsonwebtoken": "^8.5.1",
-      "moment": "^2.29.1",
-      "mongoose": "^5.13.10",
-      "mongoose-unique-validator": "^2.0.3",
+      "joi": "14.3.1",
+      "jsonwebtoken": "8.5.1",
+      "moment": "2.29.1",
+      "mongoose": "5.13.10",
+      "mongoose-unique-validator": "2.0.3",
       "monk": "^7.3.4",
       "morgan": "^1.10.0",
       "multer": "^1.4.3",
-      "node-gyp": "^8.4.1",
-      "nodemailer": "^6.7.1",
-      "passport": "^0.5.0",
+      "nodemailer": "6.7.1",
+      "passport": "0.5.0",
       "passport-http": "^0.3.0",
       "passport-local": "^1.0.0",
       "peer": "^0.6.1",
